// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReplyToCommentButton default 1`] = `
<button
  className="action-reply no-border no-background"
  onClick={[Function]}
  type="button"
>
  <div
    className="custom-overlay"
  >
    <div
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="assembl-icon-back-arrow"
      />
    </div>
  </div>
</button>
`;

exports[`Storyshots ReplyToCommentButton disabled 1`] = `
<button
  className="action-reply no-border no-background disabled"
  onClick={[Function]}
  type="button"
>
  <div
    className="custom-overlay"
  >
    <div
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="assembl-icon-back-arrow"
      />
    </div>
  </div>
</button>
`;
